; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/mi/extr_mi-out.c_mi_table_body.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/mi/extr_mi-out.c_mi_table_body.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_out = type { i32 }
%struct.TYPE_3__ = type { i64 }

@ui_out_type_list = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"body\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mi_table_body(%struct.ui_out* %0) #0 {
  %2 = alloca %struct.ui_out*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.ui_out* %0, %struct.ui_out** %2, align 8
  %4 = load %struct.ui_out*, %struct.ui_out** %2, align 8
  %5 = call %struct.TYPE_3__* @ui_out_data(%struct.ui_out* %4)
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %3, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  br label %18

11:                                               ; preds = %1
  %12 = load %struct.ui_out*, %struct.ui_out** %2, align 8
  %13 = load i32, i32* @ui_out_type_list, align 4
  %14 = call i32 @mi_close(%struct.ui_out* %12, i32 %13)
  %15 = load %struct.ui_out*, %struct.ui_out** %2, align 8
  %16 = load i32, i32* @ui_out_type_list, align 4
  %17 = call i32 @mi_open(%struct.ui_out* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %16)
  br label %18

18:                                               ; preds = %11, %10
  ret void
}

declare dso_local %struct.TYPE_3__* @ui_out_data(%struct.ui_out*) #1

declare dso_local i32 @mi_close(%struct.ui_out*, i32) #1

declare dso_local i32 @mi_open(%struct.ui_out*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
